--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,13 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>X 市阿波踊り協会 データベース</title>
+    <title>XCAA-DB | ホーム</title>
   </head>
   <body>
-    <p>hello</p>
+    <h1>X 市阿波踊り協会データベース</h1>
+    <h2>X City Awaodori Association Database (XCAA-DB)</h2>
+    <p>
+      <a href="{{url_for('groups_groups')}}">参加連の一覧</a>
+    </p>
   </body>
 </html>
