--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>XCAA-DB | ホーム</title>
+    <title>ホーム | XCAA-DB</title>
   </head>
   <body>
     <h1>X 市阿波踊り協会データベース</h1>
