--- a/templates/groups/group-not-found.html
+++ b/templates/groups/group-not-found.html
@@ -5,6 +5,11 @@
     <title>XCAA-DB | 連が見つかりませんでした</title>
   </head>
   <body>
-    ahaha
+    連が見つかりませんでした．
+
+    <p>
+      <a href="{{url_for('groups_groups')}}">参加連の一覧</a><br/>
+      <a href="{{url_for('index')}}">ホームに戻る</a>
+    </p>
   </body>
 </html>
