--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <h1>X 市阿波踊り協会データベース</h1>
     <h2>X City Awaodori Association Database (XCAA-DB)</h2>
     <p>
-      <a href="{{url_for('groups_groups')}}">参加連の一覧</a>
+      <a href="{{url_for('groups_groups')}}">参加連の一覧</a><br>
+      <a href="{{url_for('performers_performers')}}">参加者の一覧</a>
     </p>
   </body>
 </html>
