--- a/templates/performers/performer-not-found.html
+++ b/templates/performers/performer-not-found.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>XCAA-DB | 参加者が見つかりませんでした</title>
+    <title>参加者が見つかりませんでした | XCAA-DB</title>
   </head>
   <body>
     参加者が見つかりませんでした．
