--- a/templates/performers/performer.html
+++ b/templates/performers/performer.html
@@ -15,8 +15,19 @@
             <th scope="row">氏名</th>
             <td>{{performer.name}}</td>
           </tr>
+          <tr>
+            <th scope="row">生年月日</th>
+            <td>{{performer.birth_date}}</td>
+          </tr>
+          <tr>
+            <th scope="row">住所</th>
+            <td>{{performer.address}}</td>
+          </tr>
         </tbody>
       </table>
+    </p>
+    <p>
+      <a href="{{url_for('performers_performer_edit', id=performer.id)}}">基本情報の編集</a>
     </p>
 
     <h3>連絡先</h3>
