--- a/templates/performers/performer-edit.html
+++ b/templates/performers/performer-edit.html
@@ -17,7 +17,7 @@
     </p>
 
     <p>
-      <a href="{{url_for('performers_performer', id=performer.id)}}"></a>参加者の詳細<br/>
+      <a href="{{url_for('performers_performer', id=performer.id)}}">参加者の詳細</a><br/>
       <a href="{{url_for('performers_performers')}}">参加者の一覧</a><br/>
       <a href="{{url_for('index')}}">ホームに戻る</a>
     </p>
